[Feature] Added display by category
